@@ -9,6 +9,7 @@
 - Improved logging
 - Fixed expanding of the game object tree in the outline if the scene graph has been modified (https://github.com/mbrlabs/Mundus/issues/8)
 - Implemented game object renaming in the outline
+- Implemented duplicate game object (deep copy), terrain can not be duplicated
 
 [0.0.8] ~ 23/06/2016
 - Updated libGDX to 1.9.3
